<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_required_data_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#fff"
    tools:context="com.woofnroof.woofnroofapp.RequiredDataScreen">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/requiredscreen_looksgood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp"
            android:id="@+id/textView4" />

        <TextView
            android:text="@string/requiredscreen_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#555"
            android:textSize="18sp"
            android:id="@+id/textView6" />

        <TextView
            android:text="@string/requiredscreen_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAllCaps="true"
            android:textColor="#555"
            android:textSize="16sp"
            android:id="@+id/textView7" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textColorHint="#555"
            android:ems="10"
            android:textColor="#555"
            android:textSize="20sp"
            android:id="@+id/inputName" />


        <TextView
            android:text="@string/requiredscreen_email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textColor="#555"
            android:textSize="16sp"
            android:id="@+id/textView8" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColorHint="#555"
            android:ems="10"
            android:enabled="false"
            android:textColor="#555"
            android:textSize="20sp"
            android:id="@+id/inputEmail" />

        <TextView
            android:text="@string/requiredscreen_phone_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textColor="#555"
            android:textSize="16sp"
            android:id="@+id/textView9" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColorHint="#555"
            android:ems="10"
            android:textColor="#555"
            android:textSize="20sp"
            android:id="@+id/inputPhone" />


        <Button
            android:text="@string/requiredscreen_continue"
            android:background="@color/colorPrimary"
            android:textAllCaps="true"
            android:padding="10dp"
            android:id="@+id/createAccountButton"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textColor="#fff"
            android:layout_marginBottom="0dp"
            android:textSize="20sp"/>

    </LinearLayout>
</RelativeLayout>
