<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.woofnroof.woofnroofapp.LoginScreen"
    android:elevation="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_height="match_parent"
            app:srcCompat="@drawable/background_login"
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <ImageView
                app:srcCompat="@drawable/logo_white"
                android:id="@+id/imageView2"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="80dp"
                android:layout_width="80dp" />

            <TextView
                android:text="@string/loginscreen_welcome_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:id="@+id/textView"
                android:textColor="#fff"
                android:textAlignment="center"
                android:textSize="20sp" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />

            <Button
                android:text="@string/loginscreen_signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_transparent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textAllCaps="false"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:id="@+id/button2" />

            <TextView
                android:text="@string/loginscreen_already"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:id="@+id/textView2"
                android:textAlignment="center" />
            <Button
                android:text="@string/loginscreen_loginhere"
                android:background="#0000"
                android:textAllCaps="false"
                android:paddingBottom="0dp"
                android:paddingTop="0dp"
                android:id="@+id/textView3"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:textSize="16sp"/>

            <TextView
                android:text="@string/loginscreen_termns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTerms"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp" />


        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
